--- a/ByWay/appsettings.json
+++ b/ByWay/appsettings.json
@@ -13,5 +13,14 @@
     "Issuer": "Byway",
     "Audience": "BywayUsers"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUsername": "meromahmoudelrabbat@gmail.com",
+    "SmtpPassword": "dwjtvvyzscndzzlw",
+    "FromEmail": "noreply@byway.com",
+    "FromName": "Byway Team",
+    "EnableSsl": "true"
+  }
 }
