--- a/Back-End/ByWay/appsettings.json
+++ b/Back-End/ByWay/appsettings.json
@@ -13,6 +13,7 @@
     "Issuer": "Byway",
     "Audience": "BywayUsers"
   },
+  "FrontendUrl": "http://localhost:3000",
   "AllowedHosts": "*",
   "Email": {
     "SmtpServer": "smtp.gmail.com",
@@ -22,5 +23,19 @@
     "FromEmail": "meromahmoudelrabbat@gmail.com",
     "FromName": "Byway Team",
     "EnableSsl": "true"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "123456789-abcdefghijklmnopqrstuvwxyz123456.apps.googleusercontent.com",
+      "ClientSecret": "GOCSPX-abcdefghijklmnopqrstuvwxyz123456"
+    },
+    "Facebook": {
+      "AppId": "123456789012345",
+      "AppSecret": "abc123def456ghi789jkl012mno345pqr"
+    },
+    "GitHub": {
+      "ClientId": "abc123def456ghi789",
+      "ClientSecret": "abc123def456ghi789jkl012mno345pqr678stu901vwx"
+    }
   }
 }
