--- a/Back-End/ByWay/appsettings.json
+++ b/Back-End/ByWay/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
+    //"DefaultConnection": "Data Source=SQL1002.site4now.net;Initial Catalog=db_abf1c7_mariam2909;User Id=db_abf1c7_mariam2909_admin;Password=@Karadeniz64;"
     "DefaultConnection": "Server=.;Database=EduCore;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=False;"
   },
   "Jwt": {
