Update appsettings to include new OAuth data for production URLs

--- a/Back-End/ByWay/appsettings.json
+++ b/Back-End/ByWay/appsettings.json
@@ -27,16 +27,16 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "123456789-abcdefghijklmnopqrstuvwxyz123456.apps.googleusercontent.com",
-      "ClientSecret": "GOCSPX-abcdefghijklmnopqrstuvwxyz123456"
+      "ClientId": "1068035315731-p7p7jd7jjjfamjagiasit0ltolenqljn.apps.googleusercontent.com",
+      "ClientSecret": "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"
     },
     "Facebook": {
       "AppId": "123456789012345",
       "AppSecret": "abc123def456ghi789jkl012mno345pqr"
     },
     "GitHub": {
-      "ClientId": "abc123def456ghi789",
-      "ClientSecret": "abc123def456ghi789jkl012mno345pqr678stu901vwx"
+      "ClientId": "Ov23lipFDld3Rmm8IGAw",
+      "ClientSecret": "7e89c33f712ad32b9857d87f54cc51083e9ce4a7"
     }
   }
 }
