--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+Back-End/ByWay/appsettings.json
+Back-End/ByWay/appsettings.Development.json
